# prqrs

./: .pre-commit-config.yaml  Cargo.toml  README.md  benchmark_1m.py  demo.py  pyproject.toml
.github/workflows/: CI.yml
src/: lib.rs
