[build-system]
requires = ["maturin>=1.4,<2.0", "patchelf"]
build-backend = "maturin"

[project]
name = "priorityq"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[tool.maturin]
features = ["pyo3/extension-module"]
